syntax = "proto3";

package grpcapi;

option go_package = "github.com/srishtea-22/TaskMaster/pkg/grpcapi";

service WorkerService {
  rpc SendTask (TaskRequest) returns (TaskResponse) {}
}

message TaskRequest {
  string data = 1;
}

message TaskResponse {
  string result = 1;
  bool success = 2;
}